apps/hello-openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-openshift
  labels:
    app.kubernetes.io/name: hello-openshift
